example/runtime/constrainttemplate-substrate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: runtimesubstrateprocess
spec:
  crd:
    spec:
      names:
        kind: RuntimeSubstrateProcess
      validation:
        openAPIV3Schema:
          type: object
          properties:
            failurePolicy:
              type: string
            behaviors:
              type: object
              x-kubernetes-preserve-unknown-fields: true
  targets:
  - target: runtime.gatekeeper.sh
    code:
    - engine: Runtime
      source:
        version: v1alpha1
